[package]
name = "rust_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.20.1"
eyre = "0.6.8"
color-eyre = "0.6.2"
tracing = "0.1.36"

# optional
reqwest = "0.11.11"
rayon = "1.5"

sqlx = {version = "0.6.1", features = ["postgres", "runtime-async-std-native-tls"]}